--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "loom-js": "^1.14.0",
+    "loom-truffle-provider": "^0.4.0",
     "truffle-contract": "^3.0.5",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuetify": "^1.0.0",
     "vuex": "^3.0.1",
-    "web3": "^0.20.6"
+    "web3": "^1.0.0-beta.34"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
